Build the JCL model from the MAPA grammars, not from copied MAPA Java
The grammars now compile straight from the src/vendor/mapa submodule, and a
listener of our own walks JCLParser over the source as it stands. That drops
11,343 lines of copied MAPA Java along with the preprocessing pass that wrote
temp files, so every line number in the model is a line of the file the
statement was written in rather than of a work file.

The listener covers the job card, EXEC PGM= and EXEC of a PROC (in-stream via
PROC/PEND, catalogued via the procedure library paths), DD statements with
their concatenations, INCLUDE, symbolic parameters (SET, PROC defaults, EXEC
overrides, &VAR and &VAR. in DSN and in the EXEC target) and COND.

A step of an expanded PROC keeps the line of its own EXEC inside the PROC body
(and, for a catalogued PROC, that file's path); the invoking EXEC's line stays
on the PROC call step that precedes it in the flattened step list.

Only JCLLexer.g4 and JCLParser.g4 are generated: the preprocessor, TSO, DSNTSO
and DDAMP grammars served the deleted Java and nothing here walks them.

Co-Authored-By: TOMKD <sample@example.com>